find_package(${QT_PACKAGE_NAME} REQUIRED COMPONENTS Gui Sql)

add_library(dpclient)

target_sources(dpclient PRIVATE
	document.cpp
	document.h
	settings_table.h
	settings.cpp
	settings.h
	brushes/brush.cpp
	brushes/brush.h
	brushes/brushpresetmodel.cpp
	brushes/brushpresetmodel.h
	canvas/acl.cpp
	canvas/acl.h
	canvas/blendmodes.cpp
	canvas/blendmodes.h
	canvas/canvasmodel.cpp
	canvas/canvasmodel.h
	canvas/canvasshortcuts.cpp
	canvas/canvasshortcuts.h
	canvas/documentmetadata.cpp
	canvas/documentmetadata.h
	canvas/indexbuilderrunnable.cpp
	canvas/indexbuilderrunnable.h
	canvas/layerlist.cpp
	canvas/layerlist.h
	canvas/paintengine.cpp
	canvas/paintengine.h
	canvas/point.h
	canvas/selection.cpp
	canvas/selection.h
	canvas/timelinemodel.cpp
	canvas/timelinemodel.h
	canvas/userlist.cpp
	canvas/userlist.h
	contentfilter/contentfilter.cpp
	contentfilter/contentfilter.h
	drawdance/aclstate.cpp
	drawdance/aclstate.h
	drawdance/annotation.cpp
	drawdance/annotation.h
	drawdance/annotationlist.cpp
	drawdance/annotationlist.h
	drawdance/brushengine.cpp
	drawdance/brushengine.h
	drawdance/brushpreview.cpp
	drawdance/brushpreview.h
	drawdance/canvashistory.cpp
	drawdance/canvashistory.h
	drawdance/canvasstate.cpp
	drawdance/canvasstate.h
	drawdance/documentmetadata.cpp
	drawdance/documentmetadata.h
	drawdance/eventlog.cpp
	drawdance/eventlog.h
	drawdance/frame.cpp
	drawdance/frame.h
	drawdance/global.cpp
	drawdance/global.h
	drawdance/image.cpp
	drawdance/image.h
	drawdance/layercontent.cpp
	drawdance/layercontent.h
	drawdance/layergroup.cpp
	drawdance/layergroup.h
	drawdance/layerlist.cpp
	drawdance/layerlist.h
	drawdance/layerprops.cpp
	drawdance/layerprops.h
	drawdance/layerpropslist.cpp
	drawdance/layerpropslist.h
	drawdance/message.cpp
	drawdance/message.h
	drawdance/paintengine.cpp
	drawdance/paintengine.h
	drawdance/perf.cpp
	drawdance/perf.h
	drawdance/snapshotqueue.cpp
	drawdance/snapshotqueue.h
	drawdance/tile.cpp
	drawdance/tile.h
	drawdance/timeline.cpp
	drawdance/timeline.h
	drawdance/ziparchive.cpp
	drawdance/ziparchive.h
	export/animationsaverrunnable.cpp
	export/animationsaverrunnable.h
	export/canvassaverrunnable.cpp
	export/canvassaverrunnable.h
	export/ffmpegexporter.cpp
	export/ffmpegexporter.h
	export/imageseriesexporter.cpp
	export/imageseriesexporter.h
	export/videoexporter.cpp
	export/videoexporter.h
	net/announcementlist.cpp
	net/announcementlist.h
	net/banlistmodel.cpp
	net/banlistmodel.h
	net/client.cpp
	net/client.h
	net/login.cpp
	net/login.h
	net/loginsessions.cpp
	net/loginsessions.h
	net/messagequeue.cpp
	net/messagequeue.h
	net/server.cpp
	net/server.h
	net/servercmd.cpp
	net/servercmd.h
	net/sessionlistingmodel.cpp
	net/sessionlistingmodel.h
	net/tcpserver.cpp
	net/tcpserver.h
	tools/annotation.cpp
	tools/annotation.h
	tools/beziertool.cpp
	tools/beziertool.h
	tools/colorpicker.cpp
	tools/colorpicker.h
	tools/floodfill.cpp
	tools/floodfill.h
	tools/freehand.cpp
	tools/freehand.h
	tools/inspector.cpp
	tools/inspector.h
	tools/laser.cpp
	tools/laser.h
	tools/selection.cpp
	tools/selection.h
	tools/shapetools.cpp
	tools/shapetools.h
	tools/strokesmoother.cpp
	tools/strokesmoother.h
	tools/tool.cpp
	tools/tool.h
	tools/toolcontroller.cpp
	tools/toolcontroller.h
	tools/toolproperties.cpp
	tools/toolproperties.h
	tools/utils.cpp
	tools/utils.h
	tools/zoom.cpp
	tools/zoom.h
	utils/avatarlistmodel.cpp
	utils/avatarlistmodel.h
	utils/avatarlistmodeldelegate.h
	utils/canvasshortcutsmodel.cpp
	utils/canvasshortcutsmodel.h
	utils/certificatestoremodel.cpp
	utils/certificatestoremodel.h
	utils/changeflags.h
	utils/colorscheme.cpp
	utils/colorscheme.h
	utils/customshortcutmodel.cpp
	utils/customshortcutmodel.h
	utils/funstuff.cpp
	utils/funstuff.h
	utils/html.cpp
	utils/html.h
	utils/identicon.cpp
	utils/identicon.h
	utils/images.cpp
	utils/images.h
	utils/kis_cubic_curve.cpp
	utils/kis_cubic_curve.h
	utils/listservermodel.cpp
	utils/listservermodel.h
	utils/logging.cpp
	utils/logging.h
	utils/newversion.cpp
	utils/newversion.h
	utils/sessionfilterproxymodel.cpp
	utils/sessionfilterproxymodel.h
	utils/sessionidvalidator.cpp
	utils/sessionidvalidator.h
	utils/shortcutdetector.cpp
	utils/shortcutdetector.h
	utils/usernamevalidator.cpp
	utils/usernamevalidator.h
)

# https://gitlab.kitware.com/cmake/cmake/-/issues/19813
if(WIN32)
	target_sources(dpclient PRIVATE
		contentfilter/contentfilter_win.cpp
	)
else()
	target_sources(dpclient PRIVATE
		contentfilter/contentfilter_dummy.cpp
	)
endif()

target_link_libraries(dpclient
	PRIVATE
		cmake-config
	PUBLIC
		dpshared
		${QT_PACKAGE_NAME}::Core
		${QT_PACKAGE_NAME}::Network
		${QT_PACKAGE_NAME}::Gui
		${QT_PACKAGE_NAME}::Sql
		Drawdance::dpcommon
		Drawdance::dpengine
		Drawdance::dpmsg
)

if(${QT_PACKAGE_NAME}LinguistTools_FOUND)
	add_subdirectory(i18n)
endif()

if(TESTS)
	add_subdirectory(tests)
endif()

directory_auto_source_groups()
