[package]
name = "rustpile"
version = "0.1.0"
publish = false
edition = "2018"
license = "GPLv3"

[lib]
crate-type = ["staticlib"]

[dependencies]
dpcore = { path = "../dpcore" }
dpimpex = { path = "../dpimpex" }
tracing-subscriber = { version = "0.2.20", default-features=false, features = ["fmt"] }
tracing = "0.1.22"

