[package]
name = "rustpile"
version = "2.2.0"
publish = false
edition = "2021"
license = "GPLv3"

[lib]
crate-type = ["staticlib"]

[dependencies]
dpcore = { path = "../dpcore" }
dpimpex = { path = "../dpimpex" }
tracing-subscriber = { version = "0.3.15", default-features=false, features = ["fmt"] }
tracing = "0.1.36"

