[package]
name = "rustpile"
version.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
dpcore = { path = "../dpcore" }
dpimpex = { path = "../dpimpex" }
tracing-subscriber = { version = "0.3.15", default-features=false, features = ["fmt"] }
tracing = "0.1.36"
